--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en" th:fragment="head">
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+
+    <!-- all css -->
+    <link href="https://cdn.bootcss.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+          th:href="@{/APIs/css/bootstrap.min.css}"
+          rel="stylesheet" media="screen"/>
+
+    <link href="http://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css"
+          th:href="@{/APIs/css/jquery.dataTables.min.css}" rel="stylesheet" media="screen"/>
+
+    <link href="../../../public/css/main.css"
+          th:href="@{/APIs/css/main.css}" rel="stylesheet" media="screen"/>
+
+    <title>spring boot helloworld demo</title>
 </head>
+
 <body>
+<!-- 通用头部模板 -->
+<div th:fragment="header">
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#" th:href="@{/APIs/index.html}">Home</a>
+            </div>
+        </div>
+    </nav>
+    <hr/>
+</div>
 
 </body>
 </html>
