调整静态资源位置：classpath:/static

--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -21,8 +21,8 @@
     <script src="http://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"
             th:src="@{/APIs/js/jquery.dataTables.min.js}"></script>
 
-    <script src="../../../public/js/index.js"
-            th:src="@{/APIs/js/jquery.dataTables.min.js}"></script>
+    <script src="../../static/js/index.js"
+            th:src="@{/APIs/js/index.js}"></script>
 
 </div>
 
