--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -11,7 +11,7 @@
     <link href="http://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css"
           th:href="@{/APIs/css/jquery.dataTables.min.css}" rel="stylesheet" media="screen"/>
 
-    <link href="../../../public/css/main.css"
+    <link href="../../static/css/main.css"
           th:href="@{/APIs/css/main.css}" rel="stylesheet" media="screen"/>
 
     <title>spring boot helloworld demo</title>
