--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<!-- 统一的head区域 -->
 <head lang="en" th:fragment="head">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
@@ -23,7 +24,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#" th:href="@{/APIs/index.html}">Home</a>
+                <a class="navbar-brand" href="#" th:href="@{/APIs/index}">Home</a>
             </div>
         </div>
     </nav>
